--- a/package.json
+++ b/package.json
@@ -39,6 +39,9 @@
     ]
   },
   "devDependencies": {
-    "babel-plugin-styled-components": "^2.0.2"
+    "autoprefixer": "^10.4.2",
+    "babel-plugin-styled-components": "^2.0.2",
+    "postcss": "^8.4.6",
+    "tailwindcss": "^3.0.21"
   }
 }
